[tool.poetry]
name = "cache-tower"
version = "0.1.0"
description = ""
authors = ["Carlos Cima <carlos.cima@loggi.com>"]
readme = "README.md"
packages = [{include = "cache_tower"}]

[tool.poetry.dependencies]
python = "^3.9"
redis = {version = "^4.6.0", optional = true}

[tool.poetry.extras]
redis = ["redis"]

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.7.0"
mypy = "^1.4.1"
types-redis = "^4.6.0.3"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
